--- a/web/src/mobile-styles.css
+++ b/web/src/mobile-styles.css
@@ -4,6 +4,53 @@ input {
     float: left;
 }
 
+#divMasterKey {
+    display: grid;
+    align-items: center;
+    justify-items: stretch;
+    column-gap: 4px;
+    grid-template-columns: 1fr auto auto;
+    grid-template-rows: auto auto auto;
+}
+
+#masterKeyTitle {
+    grid-column: 1 / span 4;
+    grid-row: 1;
+}
+
+#txtPrivatePart {
+    justify-self: stretch;
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#spnPrivatePartSize {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#btnProtect {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+#spnProtectedConfirmation {
+    align-self: center;
+    justify-self: end;
+    grid-column: 3;
+    grid-row: 3;
+}
+
+#txtPrivatePartConfirmation {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+#spnPrivatePartSizeConfirmation {
+    grid-column: 2;
+    grid-row: 3;
+}
+
 .large-textarea {
     width: 100%;
     height: 100px;
