--- a/web/src/css/base/password.css
+++ b/web/src/css/base/password.css
@@ -19,18 +19,14 @@
     grid-row: 1;
 }
 
-#btnGeneratePublicPart {
+#spnPublicPartSize {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+#divPasswordPublicPartActions {
+    display: inline;
     grid-column: 4;
-    grid-row: 1;
-}
-
-#btnClearPublicPart {
-    grid-column: 5;
-    grid-row: 1;
-}
-
-#btnCopyPublicPart {
-    grid-column: 6;
     grid-row: 1;
 }
 
@@ -51,7 +47,8 @@
     grid-row: 2;
 }
 
-#btnResetAlphabet {
+#divPasswordAlphabetActions {
+    display: inline;
     grid-column: 4;
     grid-row: 2;
 }
@@ -90,12 +87,8 @@
     grid-row: 5;
 }
 
-#btnViewResultPassword {
+#divResultPasswordActions {
+    display: inline;
     grid-column: 4;
-    grid-row: 5;
-}
-
-#btnCopyResultPassword {
-    grid-column: 5;
     grid-row: 5;
 }
