--- a/docs/css/mobile/password.css
+++ b/docs/css/mobile/password.css
@@ -1,7 +1,7 @@
 #divTabPasswords {
     display: grid;
     grid-template-columns: 16px 1fr auto auto auto auto;
-    grid-template-rows: auto auto auto auto auto auto auto auto 32px auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto auto 32px auto auto auto;
     align-items: center;
     justify-items: stretch;
     column-gap: 2px;
@@ -16,90 +16,87 @@
 }
 
 #txtPublicPart {
-    grid-column: 2 / span 5;
+    grid-column: 2 / span 4;
     grid-row: 2;
 }
 
-#btnGeneratePublicPart {
-    justify-self: end;
-    grid-column: 4;
-    grid-row: 3;
-}
-
-#btnClearPublicPart {
-    justify-self: end;
-    grid-column: 5;
-    grid-row: 3;
-}
-
-#btnCopyPublicPart {
-    justify-self: end;
+#spnPublicPartSize {
+    margin-left: 2px;
     grid-column: 6;
+    grid-row: 2;
+}
+
+#divPasswordPublicPartActions {
+    display: inline;
+    justify-self: end;
+    grid-column: 2 / span 5;
     grid-row: 3;
 }
 
 /******************************************/
 
 #lblAlphabet {
+    margin-top: 8px;
     grid-column: 1 / span 6;
     grid-row: 4;
 }
 
 #txtAlphabet {
-    grid-column: 2 / span 3;
+    grid-column: 2;
     grid-row: 5;
 }
 
 #spnAlphabetSize {
-    grid-column: 5;
+    margin-left: 2px;
+    grid-column: 3;
     grid-row: 5;
 }
 
-#btnResetAlphabet {
-    grid-column: 6;
+#divPasswordAlphabetActions {
+    display: inline;
+    grid-column: 4 / span 3;
     grid-row: 5;
 }
 
 /******************************************/
 
 #lblAlphabetLength {
+    margin-top: 8px;
     grid-column: 1 / span 6;
-    grid-row: 7;
+    grid-row: 6;
 }
 
 #numOutputSizeRange {
-    grid-column: 2 / span 4;
-    grid-row: 8;
+    grid-column: 2 / span 2;
+    grid-row: 7;
 }
 
 #numOutputSizeNum {
-    grid-column: 6;
-    grid-row: 8;
+    grid-column: 4 / span 3;
+    grid-row: 7;
 }
 
 /******************************************/
 
 #lblPassword {
     grid-column: 1 / span 6;
-    grid-row: 10;
+    grid-row: 9;
 }
 
 #txtResultPassword {
     grid-column: 2 / span 4;
-    grid-row: 11;
+    grid-row: 10;
 }
 
 #spnResultPasswordLength {
+    margin-left: 2px;
     grid-column: 6;
+    grid-row: 10;
+}
+
+#divResultPasswordActions {
+    display: inline;
+    justify-self: end;
+    grid-column: 2 / span 5;
     grid-row: 11;
-}
-
-#btnViewResultPassword {
-    grid-column: 5;
-    grid-row: 12;
-}
-
-#btnCopyResultPassword {
-    grid-column: 6;
-    grid-row: 12;
 }
