--- a/web/src/css/base/cipher.css
+++ b/web/src/css/base/cipher.css
@@ -1,7 +1,7 @@
 #divTabCiphers {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto auto 20px auto auto;
+    grid-template-rows: auto 1fr 20px 5fr auto;
     column-gap: 2px;
 }
 
