--- a/docs/css/base/password.css
+++ b/docs/css/base/password.css
@@ -1,6 +1,6 @@
 #divTabPasswords {
     display: grid;
-    grid-template-columns: auto 1fr auto auto auto auto auto;
+    grid-template-columns: auto 1fr auto auto auto;
     grid-template-rows: auto auto auto 32px auto;
     align-items: center;
     justify-items: stretch;
