--- a/web/src/css/base/vault.css
+++ b/web/src/css/base/vault.css
@@ -10,3 +10,42 @@
     height: 500px;
     margin: 1px;
 }
+
+#divVaultTreeViewSearchControls {
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    grid-template-rows: auto;
+    align-items: baseline;
+    width: 100%;
+}
+
+#lblVaultTreeViewSearch {
+    grid-column: 1;
+    grid-row: 1;
+    margin-right: 2px;
+}
+
+#txtVaultTreeViewSearch {
+    grid-column: 2;
+    grid-row: 1;
+    width: 100%;
+}
+
+#lblVaultTreeViewSearchType {
+    grid-column: 3;
+    grid-row: 1;
+    margin-left: 8px;
+    margin-right: 2px;
+}
+
+#cboVaultTreeViewSearchType {
+    grid-column: 4;
+    grid-row: 1;
+}
+
+.treeview-container {
+    height: 500px;
+    overflow-y: auto;
+    background-color: white;
+    border: 1px solid lightgray;
+}
