--- a/web/src/css/base/vault.css
+++ b/web/src/css/base/vault.css
@@ -17,6 +17,7 @@
     grid-template-rows: auto;
     align-items: baseline;
     width: 100%;
+    margin-bottom: 8px;
 }
 
 #lblVaultTreeViewSearch {
