--- a/docs/css/mobile/common.css
+++ b/docs/css/mobile/common.css
@@ -1,11 +1,11 @@
 input {
     width: 100%;
     margin: 1px;
-    zoom: 1.2;
+    transform: scale(1.2);
 }
 
 button {
-    zoom: 1.25;
+    transform: scale(1.25);
     margin: 1px;
     font-size: 0.8em;
     align-self: stretch;
