--- a/web/src/css/mobile/vault.css
+++ b/web/src/css/mobile/vault.css
@@ -2,7 +2,8 @@
     white-space: pre;
     overflow: auto;
     resize: none;
-    width: 100%;
+    width: auto;
+    min-width: 0;
     height: 300px;
     margin: 1px;
 }
