--- a/web/src/css/mobile/common.css
+++ b/web/src/css/mobile/common.css
@@ -1,5 +1,10 @@
+body {
+    min-height: 100vh;
+}
+
 input {
-    width: 100%;
+    width: auto;
+    min-width: 0;
     margin: 1px;
     zoom: 1.2;
 }
@@ -13,11 +18,13 @@ button {
 }
 
 .large-textarea {
-    width: 100%;
+    width: auto;
+    min-width: 0;
     height: 100px;
 }
 
 .very-large-textarea {
-    width: 100%;
+    width: 98%;
+    min-width: 0;
     height: 150px;
 }
