--- a/web/src/css/mobile/masterKey.css
+++ b/web/src/css/mobile/masterKey.css
@@ -17,6 +17,7 @@
     grid-column: 1;
     grid-row: 2;
     width: auto;
+    min-width: 0;
 }
 
 #spnPrivatePartSize {
@@ -40,6 +41,7 @@
     grid-column: 1;
     grid-row: 3;
     width: auto;
+    min-width: 0;
 }
 
 #spnPrivatePartSizeConfirmation {
