--- a/web/src/css/base/cipher.css
+++ b/web/src/css/base/cipher.css
@@ -1,33 +1,40 @@
 #divTabCiphers {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto 1fr 20px 5fr auto;
+    grid-template-rows: auto 20px auto 1fr 20px 5fr auto;
     column-gap: 2px;
+}
+
+/******************************************/
+
+#btnClearAllCipherInfo {
+    grid-column: 1 / span 3;
+    grid-row: 1;
 }
 
 /******************************************/
 
 #lblCipher {
     grid-column: 1 / span 3;
-    grid-row: 1;
+    grid-row: 3;
 }
 
 #txtCipherName {
     grid-column: 1 / span 3;
-    grid-row: 2;
+    grid-row: 4;
 }
 
 /******************************************/
 
 #txtCipherSource {
     grid-column: 1;
-    grid-row: 4;
+    grid-row: 6;
 }
 
 #divCipherSourceActions {
     justify-self: end;
     grid-column: 1;
-    grid-row: 5;
+    grid-row: 7;
 }
 
 /******************************************/
@@ -36,18 +43,18 @@
     display: grid;
     align-self: start;
     grid-column: 2;
-    grid-row: 4;
+    grid-row: 6;
 }
 
 /******************************************/
 
 #txtCipherTarget{
     grid-column: 3;
-    grid-row: 4;
+    grid-row: 6;
 }
 
 #divCipherTargetActions{
     justify-self: end;
     grid-column: 3;
-    grid-row: 5;
+    grid-row: 7;
 }
