--- a/docs/css/base/vault.css
+++ b/docs/css/base/vault.css
@@ -6,7 +6,8 @@
     white-space: pre;
     overflow: auto;
     resize: none;
-    width: 100%;
+    width: auto;
+    min-width: 0;
     height: 500px;
     margin: 1px;
 }
@@ -16,7 +17,8 @@
     grid-template-columns: auto 1fr auto auto;
     grid-template-rows: auto;
     align-items: baseline;
-    width: 100%;
+    width: auto;
+    min-width: 0;
     margin-bottom: 8px;
 }
 
@@ -30,6 +32,7 @@
     grid-column: 2;
     grid-row: 1;
     width: auto;
+    min-width: 0;
 }
 
 #lblVaultTreeViewSearchType {
