--- a/docs/css/mobile/password.css
+++ b/docs/css/mobile/password.css
@@ -19,6 +19,7 @@
     grid-column: 2 / span 4;
     grid-row: 2;
     width: auto;
+    min-width: 0;
 }
 
 #spnPublicPartSize {
@@ -46,6 +47,7 @@
     grid-column: 2;
     grid-row: 5;
     width: auto;
+    min-width: 0;
 }
 
 #spnAlphabetSize {
@@ -89,6 +91,7 @@
     grid-column: 2 / span 4;
     grid-row: 10;
     width: auto;
+    min-width: 0;
 }
 
 #spnResultPasswordLength {
