Fixed vault text view width issue

--- a/web/src/css/mobile/vault.css
+++ b/web/src/css/mobile/vault.css
@@ -2,7 +2,7 @@
     white-space: pre;
     overflow: auto;
     resize: none;
-    width: auto;
+    width: 98%;
     min-width: 0;
     height: 300px;
     margin: 1px;
