--- a/web/src/css/base/vault.css
+++ b/web/src/css/base/vault.css
@@ -6,7 +6,7 @@
     white-space: pre;
     overflow: auto;
     resize: none;
-    width: auto;
+    width: 99%;
     min-width: 0;
     height: 500px;
     margin: 1px;
