--- a/docs/css/base/password.css
+++ b/docs/css/base/password.css
@@ -1,7 +1,7 @@
 #divTabPasswords {
     display: grid;
     grid-template-columns: auto 1fr auto auto auto;
-    grid-template-rows: auto auto auto 32px auto;
+    grid-template-rows: auto 17px auto auto auto 32px auto;
     align-items: center;
     justify-items: stretch;
     column-gap: 4px;
@@ -9,86 +9,94 @@
 
 /******************************************/
 
-#lblPublicPart {
+#btnClearAllPasswordInfo {
     grid-column: 1;
     grid-row: 1;
+    justify-self: start;
+}
+
+/******************************************/
+
+#lblPublicPart {
+    grid-column: 1;
+    grid-row: 3;
 }
 
 #txtPublicPart {
     grid-column: 2;
-    grid-row: 1;
+    grid-row: 3;
 }
 
 #spnPublicPartSize {
     grid-column: 3;
-    grid-row: 1;
+    grid-row: 3;
 }
 
 #divPasswordPublicPartActions {
     display: inline;
     grid-column: 4;
-    grid-row: 1;
+    grid-row: 3;
 }
 
 /******************************************/
 
 #lblAlphabet {
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 4;
 }
 
 #txtAlphabet {
     grid-column: 2;
-    grid-row: 2;
+    grid-row: 4;
 }
 
 #spnAlphabetSize {
     grid-column: 3;
-    grid-row: 2;
+    grid-row: 4;
 }
 
 #divPasswordAlphabetActions {
     display: inline;
     grid-column: 4;
-    grid-row: 2;
+    grid-row: 4;
 }
 
 /******************************************/
 
 #lblAlphabetLength {
     grid-column: 1;
-    grid-row: 3;
+    grid-row: 5;
 }
 
 #numOutputSizeRange {
     grid-column: 2 / span 2;
-    grid-row: 3;
+    grid-row: 5;
 }
 
 #numOutputSizeNum {
     grid-column: 4;
-    grid-row: 3;
+    grid-row: 5;
 }
 
 /******************************************/
 
 #lblPassword {
     grid-column: 1;
-    grid-row: 5;
+    grid-row: 6;
 }
 
 #txtResultPassword {
     grid-column: 2;
-    grid-row: 5;
+    grid-row: 6;
 }
 
 #spnResultPasswordLength {
     grid-column: 3;
-    grid-row: 5;
+    grid-row: 6;
 }
 
 #divResultPasswordActions {
     display: inline;
     grid-column: 4;
-    grid-row: 5;
+    grid-row: 6;
 }
