--- a/docs/css/mobile/password.css
+++ b/docs/css/mobile/password.css
@@ -1,23 +1,28 @@
 #divTabPasswords {
     display: grid;
     grid-template-columns: 16px 1fr auto auto auto auto;
-    grid-template-rows: auto auto auto auto auto auto auto 32px auto auto auto;
+    grid-template-rows: auto 16px auto auto auto auto auto auto auto 32px auto auto auto;
     align-items: center;
     justify-items: stretch;
     column-gap: 2px;
     row-gap: 2px;
 }
 
-/******************************************/
-
-#lblPublicPart {
+#btnClearAllPasswordInfo {
     grid-column: 1 / span 6;
     grid-row: 1;
 }
 
+/******************************************/
+
+#lblPublicPart {
+    grid-column: 1 / span 6;
+    grid-row: 3;
+}
+
 #txtPublicPart {
     grid-column: 2 / span 4;
-    grid-row: 2;
+    grid-row: 4;
     width: auto;
     min-width: 0;
 }
@@ -25,14 +30,14 @@
 #spnPublicPartSize {
     margin-left: 2px;
     grid-column: 6;
-    grid-row: 2;
+    grid-row: 4;
 }
 
 #divPasswordPublicPartActions {
     display: inline;
     justify-self: end;
     grid-column: 2 / span 5;
-    grid-row: 3;
+    grid-row: 5;
 }
 
 /******************************************/
@@ -40,12 +45,12 @@
 #lblAlphabet {
     margin-top: 8px;
     grid-column: 1 / span 6;
-    grid-row: 4;
+    grid-row: 6;
 }
 
 #txtAlphabet {
     grid-column: 2;
-    grid-row: 5;
+    grid-row: 7;
     width: auto;
     min-width: 0;
 }
@@ -53,13 +58,13 @@
 #spnAlphabetSize {
     margin-left: 2px;
     grid-column: 3;
-    grid-row: 5;
+    grid-row: 7;
 }
 
 #divPasswordAlphabetActions {
     display: inline;
     grid-column: 4 / span 3;
-    grid-row: 5;
+    grid-row: 7;
 }
 
 /******************************************/
@@ -67,29 +72,29 @@
 #lblAlphabetLength {
     margin-top: 8px;
     grid-column: 1 / span 6;
-    grid-row: 6;
+    grid-row: 8;
 }
 
 #numOutputSizeRange {
     grid-column: 2 / span 2;
-    grid-row: 7;
+    grid-row: 9;
 }
 
 #numOutputSizeNum {
     grid-column: 4 / span 3;
-    grid-row: 7;
+    grid-row: 9;
 }
 
 /******************************************/
 
 #lblPassword {
     grid-column: 1 / span 6;
-    grid-row: 9;
+    grid-row: 11;
 }
 
 #txtResultPassword {
     grid-column: 2 / span 4;
-    grid-row: 10;
+    grid-row: 12;
     width: auto;
     min-width: 0;
 }
@@ -97,12 +102,12 @@
 #spnResultPasswordLength {
     margin-left: 2px;
     grid-column: 6;
-    grid-row: 10;
+    grid-row: 12;
 }
 
 #divResultPasswordActions {
     display: inline;
     justify-self: end;
     grid-column: 2 / span 5;
-    grid-row: 11;
+    grid-row: 13;
 }
