--- a/web/src/css/base/password.css
+++ b/web/src/css/base/password.css
@@ -1,7 +1,7 @@
 #divTabPasswords {
     display: grid;
     grid-template-columns: auto 1fr auto auto auto;
-    grid-template-rows: auto 17px auto auto auto 32px auto;
+    grid-template-rows: auto 17px auto auto auto auto 32px auto;
     align-items: center;
     justify-items: stretch;
     column-gap: 4px;
@@ -80,23 +80,36 @@
 
 /******************************************/
 
-#lblPassword {
+#lblPasswordVersion {
     grid-column: 1;
     grid-row: 6;
 }
 
+#cboPasswordVersion {
+    grid-column: 2 / span 3;
+    grid-row: 6;
+    justify-self: start;
+}
+
+/******************************************/
+
+#lblPassword {
+    grid-column: 1;
+    grid-row: 7;
+}
+
 #txtResultPassword {
     grid-column: 2;
-    grid-row: 6;
+    grid-row: 7;
 }
 
 #spnResultPasswordLength {
     grid-column: 3;
-    grid-row: 6;
+    grid-row: 7;
 }
 
 #divResultPasswordActions {
     display: inline;
     grid-column: 4;
-    grid-row: 6;
+    grid-row: 7;
 }
