Updated mobile CSS for password

--- a/web/src/css/base/common.css
+++ b/web/src/css/base/common.css
@@ -2,8 +2,12 @@ body, input {
     font-family: consolas;
 }
 
-input {
+input, select {
     margin: 2px;
+}
+
+select {
+    padding: 1px;
 }
 
 button {
