--- a/web/src/css/mobile/password.css
+++ b/web/src/css/mobile/password.css
@@ -1,6 +1,6 @@
 #divTabPasswords {
     display: grid;
-    grid-template-columns: 16px auto 1fr auto auto auto auto;
+    grid-template-columns: 16px auto 1fr auto auto auto;
     grid-template-rows: auto 16px auto auto auto auto auto auto auto auto 24px auto auto auto;
     align-items: center;
     justify-items: stretch;
@@ -16,12 +16,12 @@
 /******************************************/
 
 #lblPublicPart {
-    grid-column: 1 / span 7;
+    grid-column: 1 / span 6;
     grid-row: 3;
 }
 
 #txtPublicPart {
-    grid-column: 2 / span 5;
+    grid-column: 2 / span 4;
     grid-row: 4;
     width: auto;
     min-width: 0;
@@ -29,14 +29,14 @@
 
 #spnPublicPartSize {
     margin-left: 2px;
-    grid-column: 7;
+    grid-column: 6;
     grid-row: 4;
 }
 
 #divPasswordPublicPartActions {
     display: inline;
     justify-self: end;
-    grid-column: 2 / span 6;
+    grid-column: 2 / span 5;
     grid-row: 5;
 }
 
@@ -44,12 +44,12 @@
 
 #lblAlphabet {
     margin-top: 8px;
-    grid-column: 1 / span 7;
+    grid-column: 1 / span 6;
     grid-row: 6;
 }
 
 #txtAlphabet {
-    grid-column: 2 / span 3;
+    grid-column: 2 / span 2;
     grid-row: 7;
     width: auto;
     min-width: 0;
@@ -57,14 +57,14 @@
 
 #spnAlphabetSize {
     margin-left: 2px;
-    grid-column: 5;
+    grid-column: 4;
     grid-row: 7;
 }
 
 #divPasswordAlphabetActions {
     display: inline;
     justify-self: end;
-    grid-column: 6 / span 2;
+    grid-column: 5 / span 2;
     grid-row: 7;
 }
 
@@ -72,17 +72,17 @@
 
 #lblAlphabetLength {
     margin-top: 8px;
-    grid-column: 1 / span 7;
+    grid-column: 1 / span 6;
     grid-row: 8;
 }
 
 #numOutputSizeRange {
-    grid-column: 2 / span 4;
+    grid-column: 2 / span 3;
     grid-row: 9;
 }
 
 #numOutputSizeNum {
-    grid-column: 6 / span 2;
+    grid-column: 5 / span 2;
     grid-row: 9;
 }
 
@@ -102,12 +102,12 @@
 /******************************************/
 
 #lblPassword {
-    grid-column: 1 / span 7;
+    grid-column: 1 / span 6;
     grid-row: 12;
 }
 
 #txtResultPassword {
-    grid-column: 2 / span 5;
+    grid-column: 2 / span 4;
     grid-row: 13;
     width: auto;
     min-width: 0;
@@ -115,13 +115,13 @@
 
 #spnResultPasswordLength {
     margin-left: 2px;
-    grid-column: 7;
+    grid-column: 6;
     grid-row: 13;
 }
 
 #divResultPasswordActions {
     display: inline;
     justify-self: end;
-    grid-column: 2 / span 6;
+    grid-column: 2 / span 5;
     grid-row: 14;
 }
