--- a/docs/css/base/vault.css
+++ b/docs/css/base/vault.css
@@ -54,8 +54,56 @@
     border: 1px solid lightgray;
 }
 
-#trvVaultTreeView button {
+#trvVaultTreeView button.password,
+#trvVaultTreeView button.edit-password,
+#trvVaultTreeView button.cipher {
     zoom: 1.25;
+    position: relative;
+    padding: 0px;
+}
+
+#trvVaultTreeView button.edit-password {
+    width: 25px;
+    height: 25px;
+    zoom: 1.0;
+}
+
+#trvVaultTreeView button > .content-container {
+    display: inline-grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(90deg, #00ff0040, #ffff0040, #ff000040);
+}
+
+#trvVaultTreeView button > .content-container > .timestamp {
+    grid-column: 1;
+    grid-row: 1;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+}
+
+#trvVaultTreeView button > .content-container > .text {
+    grid-column: 1;
+    grid-row: 1;
+    padding: 1px 6px 1px 6px;
+    z-index: 2;
+}
+
+#trvVaultTreeView button.not-latest::after {
+    content: attr(not-latest);
+    position: absolute;
+    margin-left: 5px;
+    font-size: 0.75em;
+    color: darkorange;
+}
+
+#trvVaultTreeView button.password.not-latest::after {
+    margin-left: 28px;
 }
 
 #trvVaultTreeView .treenode-title {
