--- a/docs/css/mobile/common.css
+++ b/docs/css/mobile/common.css
@@ -1,11 +1,11 @@
-body {
-    min-height: 100vh;
-}
-
 input {
     width: auto;
     min-width: 0;
     margin: 1px;
+    zoom: 1.2;
+}
+
+select {
     zoom: 1.2;
 }
 
