--- a/docs/css/mobile/password.css
+++ b/docs/css/mobile/password.css
@@ -1,7 +1,7 @@
 #divTabPasswords {
     display: grid;
-    grid-template-columns: 16px 1fr auto auto auto auto;
-    grid-template-rows: auto 16px auto auto auto auto auto auto auto 32px auto auto auto;
+    grid-template-columns: 16px auto 1fr auto auto auto;
+    grid-template-rows: auto 16px auto auto auto auto auto auto auto auto 24px auto auto auto;
     align-items: center;
     justify-items: stretch;
     column-gap: 2px;
@@ -9,7 +9,7 @@
 }
 
 #btnClearAllPasswordInfo {
-    grid-column: 1 / span 6;
+    grid-column: 1 / span 7;
     grid-row: 1;
 }
 
@@ -49,7 +49,7 @@
 }
 
 #txtAlphabet {
-    grid-column: 2;
+    grid-column: 2 / span 2;
     grid-row: 7;
     width: auto;
     min-width: 0;
@@ -57,13 +57,14 @@
 
 #spnAlphabetSize {
     margin-left: 2px;
-    grid-column: 3;
+    grid-column: 4;
     grid-row: 7;
 }
 
 #divPasswordAlphabetActions {
     display: inline;
-    grid-column: 4 / span 3;
+    justify-self: end;
+    grid-column: 5 / span 2;
     grid-row: 7;
 }
 
@@ -76,25 +77,38 @@
 }
 
 #numOutputSizeRange {
-    grid-column: 2 / span 2;
+    grid-column: 2 / span 3;
     grid-row: 9;
 }
 
 #numOutputSizeNum {
-    grid-column: 4 / span 3;
+    grid-column: 5 / span 2;
     grid-row: 9;
+}
+
+/******************************************/
+
+#lblPasswordVersion {
+    grid-column: 1 / span 2;
+    grid-row: 10;
+}
+
+#cboPasswordVersion {
+    grid-column: 3 / span 3;
+    grid-row: 10;
+    justify-self: start;
 }
 
 /******************************************/
 
 #lblPassword {
     grid-column: 1 / span 6;
-    grid-row: 11;
+    grid-row: 12;
 }
 
 #txtResultPassword {
     grid-column: 2 / span 4;
-    grid-row: 12;
+    grid-row: 13;
     width: auto;
     min-width: 0;
 }
@@ -102,12 +116,12 @@
 #spnResultPasswordLength {
     margin-left: 2px;
     grid-column: 6;
-    grid-row: 12;
+    grid-row: 13;
 }
 
 #divResultPasswordActions {
     display: inline;
     justify-self: end;
     grid-column: 2 / span 5;
-    grid-row: 13;
+    grid-row: 14;
 }
